--- a/CPP/CMakeLists.txt
+++ b/CPP/CMakeLists.txt
@@ -18,27 +18,19 @@ include( ${VTK_USE_FILE} )
 # Boost and its components
 find_package( Boost REQUIRED )
 
-# Creating entries for all C++ files with "main" routine
-# ##########################################################
-include( CGAL_CreateSingleSourceCGALProgram )
-
-create_single_source_cgal_program("cgalStereo.cxx")
-create_single_source_cgal_program("cgal3d.cxx")
-
 # Eigen
-
 find_package( Eigen3 3.3 REQUIRED NO_MODULE )
 
-target_link_libraries( cgalStereo PRIVATE Eigen3::Eigen ${VTK_LIBRARIES})
-target_include_directories( cgalStereo PRIVATE ${VTK_INCLUDE_DIRS} )
-
-target_link_libraries( cgal3d PRIVATE Eigen3::Eigen ${VTK_LIBRARIES})
-target_include_directories( cgal3d PRIVATE ${VTK_INCLUDE_DIRS} )
-
+add_executable(cgalStereo cgalStereo.cxx)
+add_executable(cgal3d cgal3d.cxx)
+add_executable(cgal3dCH cgal3dCH.cxx)
 add_executable(vtk3d vtk3d.cxx)
-target_link_libraries( vtk3d PRIVATE Eigen3::Eigen ${VTK_LIBRARIES})
-target_include_directories( vtk3d PRIVATE ${VTK_INCLUDE_DIRS} ${Eigen3_INCLUDE_DIRS})
-
 add_executable(vtk2d vtkStereo.cxx)
-target_link_libraries( vtk2d PRIVATE Eigen3::Eigen ${VTK_LIBRARIES})
-target_include_directories( vtk2d PRIVATE ${VTK_INCLUDE_DIRS} ${Eigen3_INCLUDE_DIRS})
+add_executable(cgalAngular cgalAngular.cxx)
+
+set( programs cgalStereo cgal3d cgal3dCH vtk3d vtk2d cgalAngular )
+
+foreach(program ${programs})
+        target_link_libraries( ${program} PRIVATE Eigen3::Eigen ${VTK_LIBRARIES} ${CGAL_LIBRARIES})
+        target_include_directories( ${program} PRIVATE ${VTK_INCLUDE_DIRS} ${CGAL_INCLUDE_DIRS} )
+endforeach(program)
